# array-test

./: .dockerignore  .gitattributes  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  decisions.md
.github/workflows/: ci.yml
adapters/sprint-loops/: README.md  array-test-phase.sh
agent-tasks/: agent-tasks.md  completed-tasks.md
docs/: ARCHITECTURE.md  SCHEMA-ANALYSIS.md  TEMPLATE.md
examples/proved-cbmc/: README.md
examples/quickstart/: README.md  judge.toml.example
selfhost/: README.md
selfhost/state/ledger/: confirmations.ndjson
selfhost/units/run-cli/: contract.toml  manifest.toml
selfhost/units/tap-cli/: contract.toml  manifest.toml
selfhost/units/verify-cli/: contract.toml  manifest.toml
sprints/s0/: sprint-meta.md
sprints/s0/sprint-plans/: test-plan.md  (+1 more)
sprints/s1/: sprint-meta.md
sprints/s10/: sprint-meta.md
sprints/s11/: sprint-meta.md
sprints/s12/: sprint-meta.md
sprints/s13/: sprint-meta.md
sprints/s14/: sprint-meta.md
sprints/s15/: sprint-meta.md
sprints/s16/: sprint-meta.md
sprints/s17/: sprint-meta.md
sprints/s18/: sprint-meta.md
sprints/s19/: sprint-meta.md
sprints/s2/: sprint-meta.md
sprints/s20/: sprint-meta.md
sprints/s21/: sprint-meta.md
sprints/s22/: sprint-meta.md
sprints/s23/: sprint-meta.md
sprints/s24/: sprint-meta.md
sprints/s25/: sprint-meta.md
sprints/s26/: sprint-meta.md
sprints/s27/: sprint-meta.md
sprints/s3/: sprint-meta.md
sprints/s4/: sprint-meta.md
sprints/s5/: sprint-meta.md
sprints/s6/: sprint-meta.md
sprints/s7/: sprint-meta.md
sprints/s8/: sprint-meta.md
sprints/s9/: sprint-meta.md
src/: audit.rs  cache.rs  chained.rs  contract.rs  dag.rs  fuzz.rs  hash.rs  judge.rs  ledger.rs  lib.rs  main.rs  manifest.rs  mutation.rs  round.rs  runner.rs  tap.rs
tests/: t11_cli.rs  t12_mutation.rs  t13_fuzz.rs  t14_sprint_loops_adapter.rs  t15_selfhost.rs  t15b_durable.rs  t16_audit.rs  t17_hardening.rs  t17_rollback.rs  t1_content_addressing.rs  t2_dag_resolver.rs  t3_runner.rs  t3b_sandbox.rs  t3c_fs_readonly.rs  t4_ledger.rs  t5_round.rs  t5b_scopes.rs  t6_tap.rs  t7_guarantees.rs  t8b_proved.rs  t9_t10_judge.rs
(+100 files in other folders)
