[package]
name = "array-test"
version = "0.1.0"
edition = "2021"
description = "A deterministic, code-based, provable regression system for agentic software construction."

[dependencies]
blake3 = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
petgraph = "0.6"
thiserror = "1"

[dev-dependencies]
tempfile = "3"
