[package]
name = "array-test"
version = "1.0.0"
edition = "2021"
description = "A deterministic, code-based, provable regression system for agentic software construction."

[dependencies]
blake3 = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "1"
petgraph = "0.8"
thiserror = "2"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
tempfile = "3"
